Bug 103294 - improve parsing of SVG stroke-dasharray property.  r+sr=bz